// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HTML by default 1`] = `
<div>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "HTML",
          "onClick": [Function],
        },
        Object {
          "content": "Text",
          "onClick": [Function],
        },
      ]
    }
  />
  <div>
    <PreviewFrame
      content="<h1>Test Template</h1>"
      key="html"
    />
  </div>
</div>
`;

exports[`renders text on tab click 1`] = `
<div>
  <Tabs
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "content": "HTML",
          "onClick": [Function],
        },
        Object {
          "content": "Text",
          "onClick": [Function],
        },
      ]
    }
  />
  <div>
    <PreviewFrame
      content="<p style=\\"white-space: pre-wrap\\">Test Template</p>"
      key="text"
    />
  </div>
</div>
`;
